# rules_coen_applied_lifecycle

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yaml  release.yaml
docs/: ORIGINAL_PRS.md  migrating-from-monorepo.md  principal-plat.txt  remaining-tasks.txt  versioning.md
docs/plan/: 01-initial-setup.md  02-module-and-toolchains.md  03-environment-macros.md  04-providers.md  05-image-rewriter.md  06-kustomize-manifest-rule.md  07-helm-manifest-rule.md  08-oci-layout-rule.md  09-oci-push-macros.md  10-release-group.md  11-public-api.md  12-dummy-workspace-tests.md  13-ci-and-release.md  README.md
lifecycle/: BUILD.bazel  defs.bzl
lifecycle/environments/: BUILD.bazel  defs.bzl  flags.bzl  select_env.bzl
lifecycle/manifests/: BUILD.bazel  helm_manifest.bzl  image_rewrite.bzl  kustomize_manifest.bzl  split_manifest.bzl
lifecycle/oci/: BUILD.bazel  layout.bzl  push.bzl
lifecycle/private/: BUILD.bazel  rewrite_images.py  split_manifest.py  stage_tree.py
lifecycle/providers/: BUILD.bazel  providers.bzl
lifecycle/release/: BUILD.bazel  release_group.bzl  release_group.sh.tpl
tests/: .bazelrc  MODULE.bazel
tests/flags/: BUILD.bazel
tests/goldens/: svc_a_alpha.yaml  svc_a_gamma.yaml
tests/release/: BUILD.bazel
tests/services/svc_a/: BUILD.bazel
tests/services/svc_a/base/: deployment.yaml
tests/services/svc_a/overlays/alpha/: kustomization.yaml
tests/services/svc_a/overlays/beta/: kustomization.yaml
tests/services/svc_a/overlays/gamma/: kustomization.yaml
tests/services/svc_b/: BUILD.bazel
tests/services/svc_b/chart/: Chart.yaml  values.yaml
tests/services/svc_b/chart/templates/: all.yaml
tests/services/svc_c/: BUILD.bazel
tests/services/svc_c/regular/: BUILD.bazel  svc_c_regular.yaml
tests/services/svc_c/special/: BUILD.bazel  svc_c_special.yaml
tests/tests/: BUILD.bazel  image_rewrite_test.sh  layout_test.sh  release_group_enum_test.sh  release_group_exec_test.sh  svc_a_beta.golden.yaml  svc_b.crds.golden.yaml  svc_b.golden.yaml  svc_b.workloads.golden.yaml
