load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "flags",
    srcs = ["flags.bzl"],
    deps = ["//lifecycle/providers"],
)

bzl_library(
    name = "select_env",
    srcs = ["select_env.bzl"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [":flags"],
)
