load(
    "@rules_farakov_lifecycle//lifecycle:defs.bzl",
    "kustomize_manifest",
    "manifests_oci_layout",
    "manifests_oci_push",
)
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "base_manifests",
    srcs = glob(["base/**/*.yaml"]),
)

filegroup(
    name = "alpha_overlay",
    srcs = glob(["overlays/alpha/**/*.yaml"]),
)

filegroup(
    name = "beta_overlay",
    srcs = glob(["overlays/beta/**/*.yaml"]),
)

filegroup(
    name = "gamma_overlay",
    srcs = glob(["overlays/gamma/**/*.yaml"]),
)

_IMAGE_REFS = {
    "original-registry/svc-a": "ghcr.io/testorg/svc-a",
}

kustomize_manifest(
    name = "svc_a_alpha",
    kustomization = "overlays/alpha/kustomization.yaml",
    base_manifests = [":base_manifests"],
    overlay_manifests = [":alpha_overlay"],
    image_refs = _IMAGE_REFS,
    env_flag = "//flags:environment",
    tag_flag = "//flags:image_tag",
    registry_flag = "//flags:image_registry",
    out = "svc_a_alpha.yaml",
)

kustomize_manifest(
    name = "svc_a_beta",
    kustomization = "overlays/beta/kustomization.yaml",
    base_manifests = [":base_manifests"],
    overlay_manifests = [":beta_overlay"],
    image_refs = _IMAGE_REFS,
    env_flag = "//flags:environment",
    tag_flag = "//flags:image_tag",
    registry_flag = "//flags:image_registry",
    out = "svc_a_beta.yaml",
)

kustomize_manifest(
    name = "svc_a_gamma",
    kustomization = "overlays/gamma/kustomization.yaml",
    base_manifests = [":base_manifests"],
    overlay_manifests = [":gamma_overlay"],
    image_refs = _IMAGE_REFS,
    env_flag = "//flags:environment",
    tag_flag = "//flags:image_tag",
    registry_flag = "//flags:image_registry",
    out = "svc_a_gamma.yaml",
)

manifests_oci_layout(
    name = "svc_a_layout",
    manifests = [
        ":svc_a_alpha",
        ":svc_a_beta",
        ":svc_a_gamma",
    ],
    flat = True,
)

manifests_oci_push(
    name = "svc_a",
    manifests = [
        ":svc_a_alpha",
        ":svc_a_beta",
        ":svc_a_gamma",
    ],
    repository = "manifests/svc_a",
    tag_flag = "//flags:image_tag",
    registry_flag = "//flags:image_registry",
    flat = True,
    component_name = "svc_a",
)

diff_test(
    name = "svc_a_alpha_golden_test",
    file1 = ":svc_a_alpha",
    file2 = "//tests:svc_a_alpha.golden.yaml",
)

diff_test(
    name = "svc_a_beta_golden_test",
    file1 = ":svc_a_beta",
    file2 = "//tests:svc_a_beta.golden.yaml",
)

diff_test(
    name = "svc_a_gamma_golden_test",
    file1 = ":svc_a_gamma",
    file2 = "//tests:svc_a_gamma.golden.yaml",
)